[gd_scene load_steps=4 format=3 uid="uid://d4gxq5l6o7n8p"]

[ext_resource type="Script" path="res://src/scripts/RedCharacter.gd" id="1_redcharacter_script"]
[ext_resource type="Script" path="res://src/scripts/HPBar.gd" id="2_hpbar_script"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_redcharacter"]
size = Vector2(32, 32)

[node name="RedCharacter" type="CharacterBody2D"]
script = ExtResource("1_redcharacter_script")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="WeaponSprite" type="Sprite2D" parent="."]
position = Vector2(30, -10)
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_redcharacter")

[node name="WalkAnimationTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="HPBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2_hpbar_script")

[connection signal="timeout" from="WalkAnimationTimer" to="." method="_on_walk_animation_timer_timeout"]